// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-tabs"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
  >
    <div
      class="ecl-tabs__container"
    >
      <div
        class="ecl-tabs__list"
        role="tablist"
      >
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="true"
            class="ecl-link ecl-link--no-visited ecl-tabs__link ecl-tabs__link--active"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item ecl-tabs__item--more"
        />
      </div>
      <button
        class="ecl-button ecl-button--ghost ecl-tabs__toggle"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            More (%d)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        class="ecl-button ecl-button--ghost ecl-tabs__prev ecl-tabs__item--hidden ecl-button--icon-only"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Previous
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-icon--rotate-270 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <button
        class="ecl-button ecl-button--ghost ecl-tabs__next ecl-tabs__item--hidden ecl-button--icon-only"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Next
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-icon--rotate-90 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</jest>
`;

exports[`Tabs Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-tabs"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-tabs__container"
    >
      <div
        class="ecl-tabs__list"
        role="tablist"
      >
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="true"
            class="ecl-link ecl-link--no-visited ecl-tabs__link ecl-tabs__link--active"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item ecl-tabs__item--more"
        />
      </div>
      <button
        class="ecl-button ecl-button--ghost ecl-tabs__toggle"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            More (%d)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        class="ecl-button ecl-button--ghost ecl-tabs__prev ecl-tabs__item--hidden ecl-button--icon-only"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Previous
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-icon--rotate-270 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <button
        class="ecl-button ecl-button--ghost ecl-tabs__next ecl-tabs__item--hidden ecl-button--icon-only"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Next
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-icon--rotate-90 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</jest>
`;

exports[`Tabs Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-tabs custom-class custom-class--test"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
  >
    <div
      class="ecl-tabs__container"
    >
      <div
        class="ecl-tabs__list"
        role="tablist"
      >
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="true"
            class="ecl-link ecl-link--no-visited ecl-tabs__link ecl-tabs__link--active"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item"
        >
          <a
            aria-selected="false"
            class="ecl-link ecl-link--no-visited ecl-tabs__link"
            href="/example"
            role="tab"
            tabindex="-1"
          >
            Tab label
          </a>
        </div>
        <div
          class="ecl-tabs__item ecl-tabs__item--more"
        />
      </div>
      <button
        class="ecl-button ecl-button--ghost ecl-tabs__toggle"
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            More (%d)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        class="ecl-button ecl-button--ghost ecl-tabs__prev ecl-tabs__item--hidden ecl-button--icon-only"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Previous
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-icon--rotate-270 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <button
        class="ecl-button ecl-button--ghost ecl-tabs__next ecl-tabs__item--hidden ecl-button--icon-only"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Next
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-icon--rotate-90 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</jest>
`;
